--- a/.github/workflows/build_pdfs.yml
+++ b/.github/workflows/build_pdfs.yml
@@ -44,6 +44,8 @@ jobs:
 
       - name: 🏳‍🌈 Install Qt
         uses: jurplel/install-qt-action@v3
+        with:
+          extra: -exclude-libs=libnss3.so,libnssutil3.so
 
       - name: 📝 Generate pdfs
         run: for i in music/*.mscz; do mscore -o "dist/${i%.mscz}.pdf" "$i"; done
