--- a/.github/workflows/build_pdfs.yml
+++ b/.github/workflows/build_pdfs.yml
@@ -45,10 +45,7 @@ jobs:
         uses: jurplel/install-qt-action@v3
 
       - name: 📝 Generate pdfs
-        uses: coactions/setup-xvfb@v1
-        with:
-          run: for i in music/*.mscz; do mscore -o "dist/${i%.mscz}.pdf" "$i"; done
-          working-directory: ./
+        run: xvfb-run for i in music/*.mscz; do mscore -o "dist/${i%.mscz}.pdf" "$i"; done
 
       - name: 📦 Generate Release
         uses: softprops/action-gh-release@v1
