--- a/.github/workflows/build_pdfs.yml
+++ b/.github/workflows/build_pdfs.yml
@@ -28,7 +28,21 @@ jobs:
         uses: coactions/setup-xvfb@v1
         with:
           working-directory: ./
-          run: ./render_pdf.sh
+          run: |
+            MUSESCORE="flatpak run org.musescore.MuseScore"
+            OUTPUT_DIR=dist
+
+            mkdir -p $OUTPUT_DIR
+
+            for i in music/*.mscz
+            do
+                FILENAME="$(basename $i)"
+                OUTPUT_FILE="$PWD/$OUTPUT_DIR/${FILENAME%.mscz}.pdf"
+                echo "CMD: $MUSESCORE -o $OUTPUT_FILE $(realpath $i)"
+                "$MUSESCORE" "-o" "$OUTPUT_FILE" "$(realpath $i)"
+            done
+            echo "Finished rendering PDFs"
+            ls -al dist/
 
       - name: 📦 Generate Release
         uses: softprops/action-gh-release@v1
