Try: run single output with no vars

--- a/.github/workflows/build_pdfs.yml
+++ b/.github/workflows/build_pdfs.yml
@@ -28,21 +28,7 @@ jobs:
         uses: coactions/setup-xvfb@v1
         with:
           working-directory: ./
-          run: |
-            MUSESCORE="flatpak run org.musescore.MuseScore"
-            OUTPUT_DIR=dist
-
-            mkdir -p $OUTPUT_DIR
-
-            for i in music/*.mscz
-            do
-                FILENAME="$(basename $i)"
-                OUTPUT_FILE="$PWD/$OUTPUT_DIR/${FILENAME%.mscz}.pdf"
-                echo "CMD: $MUSESCORE -o $OUTPUT_FILE $(realpath $i)"
-                "$MUSESCORE" "-o" "$OUTPUT_FILE" "$(realpath $i)"
-            done
-            echo "Finished rendering PDFs"
-            ls -al dist/
+          run: flatpak run org.musescore.MuseScore -o dist/opus101.pdf music/opus101.mscz
 
       - name: 📦 Generate Release
         uses: softprops/action-gh-release@v1
