--- a/.github/workflows/build_pdfs.yml
+++ b/.github/workflows/build_pdfs.yml
@@ -28,7 +28,7 @@ jobs:
         uses: coactions/setup-xvfb@v1
         with:
           working-directory: ./
-          run: flatpak run org.musescore.MuseScore -o dist/opus101.pdf music/opus101.mscz
+          run: flatpak run org.musescore.MuseScore -o $PWD/dist/opus101.pdf $PWD/music/opus101.mscz
 
       - name: 📦 Generate Release
         uses: softprops/action-gh-release@v1
