--- a/.github/workflows/build_pdfs.yml
+++ b/.github/workflows/build_pdfs.yml
@@ -25,7 +25,7 @@ jobs:
           sudo flatpak install -y --noninteractive flathub org.musescore.MuseScore
 
       - name: 📝 Build PDFs
-        run: flatpak run org.musescore.MuseScore -o $PWD/dist/opus101.pdf $PWD/music/opus101.mscz
+        run: xvfb-run flatpak run org.musescore.MuseScore -o $PWD/dist/opus101.pdf $PWD/music/opus101.mscz
 
       - name: 📦 Generate Release
         uses: softprops/action-gh-release@v1
